// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxLines renders 0 1`] = `
Array [
  .c0 {
  box-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders function 1`] = `
Array [
  .c0 {
  box-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders invalid theme path 1`] = `
Array [
  .c0 {
  box-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders negative number 1`] = `
Array [
  .c0 {
  box-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  box-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-lines: July;
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  box-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-lines: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-lines: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-lines: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-lines: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-lines: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  box-lines: July;
}

@media May {
  .c0 {
    box-lines: August;
  }
}

@media April {
  .c0 {
    box-lines: September;
  }
}

@media January {
  .c0 {
    box-lines: November;
  }
}

@media April {
  .c0 {
    box-lines: August;
  }
}

@media June {
  .c0 {
    box-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-lines: July;
}

@media May {
  .c0 {
    box-lines: August;
  }
}

@media April {
  .c0 {
    box-lines: September;
  }
}

@media January {
  .c0 {
    box-lines: November;
  }
}

@media April {
  .c0 {
    box-lines: August;
  }
}

@media June {
  .c0 {
    box-lines: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  box-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-lines: November;
  }
}

@media April {
  .c0 {
    box-lines: January;
  }
}

@media January {
  .c0 {
    box-lines: December;
  }
}

@media April {
  .c0 {
    box-lines: April;
  }
}

@media June {
  .c0 {
    box-lines: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-lines: November;
  }
}

@media April {
  .c0 {
    box-lines: January;
  }
}

@media January {
  .c0 {
    box-lines: December;
  }
}

@media April {
  .c0 {
    box-lines: April;
  }
}

@media June {
  .c0 {
    box-lines: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    box-lines: July;
  }
}

@media April {
  .c0 {
    box-lines: August;
  }
}

@media January {
  .c0 {
    box-lines: September;
  }
}

@media April {
  .c0 {
    box-lines: November;
  }
}

@media June {
  .c0 {
    box-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-lines: July;
  }
}

@media April {
  .c0 {
    box-lines: August;
  }
}

@media January {
  .c0 {
    box-lines: September;
  }
}

@media April {
  .c0 {
    box-lines: November;
  }
}

@media June {
  .c0 {
    box-lines: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-lines: January;
  }
}

@media April {
  .c0 {
    box-lines: December;
  }
}

@media January {
  .c0 {
    box-lines: April;
  }
}

@media April {
  .c0 {
    box-lines: May;
  }
}

@media June {
  .c0 {
    box-lines: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-lines: January;
  }
}

@media April {
  .c0 {
    box-lines: December;
  }
}

@media January {
  .c0 {
    box-lines: April;
  }
}

@media April {
  .c0 {
    box-lines: May;
  }
}

@media June {
  .c0 {
    box-lines: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders postitive number 1`] = `
Array [
  .c0 {
  box-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders string 1`] = `
Array [
  .c0 {
  box-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxLines renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`boxLines renders valid theme path 1`] = `
Array [
  .c0 {
  box-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-lines: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
